# Twitch-Discord-Bot

./: .gitignore  Cargo.toml  LICENSE  README.md  commands.json  config.json
.cargo/: config.toml
src/: channel_points_redemption.rs  chat_command.rs  common_structs.rs  discord.rs  generate_listen_message.rs  lib.rs  main.rs  new_follower.rs  parse_twitch_msg.rs  send_msg.rs  twitch.rs  twitch_chat_connect.rs
src/common_structs/: channel_points.rs  socket.rs  twitch.rs
src/discord/: parse_message.rs  placeholder.json
src/generate_listen_message/: channel_points_reward_msg.rs
src/twitch/: chat_bot.rs  topics_bot.rs
src/twitch/chat_bot/: command_parser.rs  msg_parser.rs  send_msg.rs
src/twitch/topics_bot/: channel_point_redemption.rs  follower.rs
